Complete-Python-Mastery/1-Getting Started/wrap.txt
*** 1- What is Python ***
Why Python:
Solve complex problems in less time with fewer lines of code.

example let`s say we want ti extract the 3 first char of "Hello World"
C#
-------------------code----------------------
str.Substring(0, 3)
-------------------code----------------------

javaScript
-------------------code----------------------
str.substr(0, 3)
-------------------code----------------------

Python
-------------------code----------------------
str[0:3]
-------------------code----------------------

Python is multi-purpose language it can use for:
Data Analysis
Al / ML
Automation
Web Apps
Mobile Apps
Desktop Apps
Testing
Hacking

reason to make Python high desirable language
High-level: don't have to worry about memory management as C++.
Huge Community: where ever get stuck we can find the solution on the net.
Cross-platform: can run on windows and mac and linux.
Large Ecosystem: have large eco system of library and frameworks and tools.
it create more than 20 years.

we have two versions in Python2 and Python3
Python2 is outdated in 2020.
in our course we will work with Python3

*** 2- Installing Python ***

from this site we download it
-------------------code----------------------
http://python.org
-------------------code----------------------

- after download to check the version
-------------------code----------------------
python3 --version
-------------------code----------------------


*** 3- Python Interpreter ***
in the CMD when type Python3 and press enter we can see what we call Interpreter
-------------------code----------------------
$ python3
Python 3.12.0 (v3.12.0:0fb18b02c8, Oct  2 2023, 09:45:56) [Clang 13.0.0 (clang-1300.0.29.30)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>>
-------------------code----------------------

Python Interpreter: is a program that execute python code

we can write an expression inside it.
in programming an expression means: piece of code that introduce a value  
-------------------code----------------------
>>> 2 + 2
4
-------------------code----------------------

in programming we have what we called "syntax error"
syntax Error: in programming syntax means grammar, so just like we have 
the concept of grammar in the language we speak we have the exact same concept
in programming
-------------------code----------------------
>>> 2 >
  File "<stdin>", line 1
    2 >
        ^
SyntaxError: invalid syntax
-------------------code----------------------

- Python Interpreter is good opportunity to quickly experiment a piece of code
and when working with real world application we need a Code editor

*** 4- Code Editors ***
when it comes to typing python code we have two options "Editor" or "IDE"
IDE: integrated Development Environment
IDE is basically code editor that comes with fancy features
- Autocompletion: as we type code this feature help you complete your code 
so we don't have to type every charter by hand it's productivity for 
boosting feature
- Debugging: finding bugs in the code
- Testing: for testing the code if it's works as expected

most famous editors:
VSCode
cursor which is fork from vscode
Atom
Sublime

most famous IDE's:
PyCharm

to download vscode 
-------------------code----------------------
code.visualstudio.com
-------------------code----------------------

*** 5- Your First Python Program ***
we will create a file with extension .py we called app1.py

we are going to use a built in function in Python called "print"
in Python we have multi built in functions to perform various type of tasks 

ex:
think as remote controller of the TV it has multi buttons for different functions
"Turn On", "Turn Off", "Change the Chanel" and so on.
this is the built in function in our TV.

we have the same concept in Python (or programming language generally)

and now one of that built in function is called "print" to print something on the screen
where ever we want to use a function we should use "()" in programming we say we 
are calling the print function.
calling a function: means execute it .
so we use call print to show Hello World in the screen
-------------------code----------------------
print("Hello World!")
-------------------code----------------------

- now to run our program we use python3
-------------------code----------------------
$ python3 app1.py
Hello World!
-------------------code----------------------

- now we can add star multi 10
-------------------code----------------------
$ python3 app1.py
**********
Hello World!
**********
-------------------code----------------------
